--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
+*{
+  border: 0;
+  font-family: "Pixelify Sans", sans-serif;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://kartinki.pics/uploads/posts/2021-07/1627408186_14-kartinkin-com-p-pikselnie-teksturi-zemli-krasivo-17.png");
+}
+.counter-container {
+  max-width: 300px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-image: url("https://bogatyr.club/uploads/posts/2023-07/1688579882_bogatyr-club-p-tekstura-pikselnoi-travi-foni-instagram-12.png");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.count {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  padding: 10px;
+  font-size: 14px;
+  background-color: #5fc717;
+  color: #fff;
+  border-radius: 4px;
+  border: dashed;
+  cursor: pointer;
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+button:hover {
+  background-color: #46960e;
+  transform: scale(1.1);
+  border-color: #000000;
+  transition: 200ms;
+  color: black;
+
+
 }
